tests/baselines/reference/accessorWithRestParam.errors.txt
<<<<<<< HEAD
accessorWithRestParam.ts(2,10): error TS1053: 'set' accessor cannot have rest parameter.
accessorWithRestParam.ts(3,17): error TS1053: 'set' accessor cannot have rest parameter.
=======
==== tests/cases/compiler/accessorWithRestParam.ts (2 errors) ====
    class C {
        set X(...v) { }
              ~~~~
!!! accessorWithRestParam.ts(2,11): error TS1053: 'set' accessor cannot have rest parameter.
        static set X(...v2) { }
                     ~~~~~
<<<<<<< HEAD
!!! error TS1053: 'set' accessor cannot have rest parameter.
    }
>>>>>>> b9bbbf1... Improve error baseline reporting
=======
!!! accessorWithRestParam.ts(3,18): error TS1053: 'set' accessor cannot have rest parameter.
    }
>>>>>>> d7cb924... Use tsc.js-style error messages in error baselines
